test/libsolidity/syntaxTests/parsing/var_storage_var.sol
contract C {
    var a;
}
// ----
// ParserError 9182: (17-20='var'): Function, variable, struct or modifier declaration expected.
